[metadata]
name = napari-chloroplasts
version = 0.1.0
author = Yu Huo
author_email = yhuo@tuta.io
url = https://github.com/niwaka-ame/napari-chloroplasts
license = BSD-3-Clause
description = a plugin for chloroplast Z-stack image analysis
classifiers =
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Framework :: napari
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.10

	Operating System :: OS Independent
	License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires = >=3.10
install_requires =
	numpy
    scipy
	tifffile
	scikit-image
    napari
    matplotlib
    readlif
    porespy
    omnipose
    networkx
include_package_data = True

[options.entry_points]
napari.manifest =
	napari-chloroplasts = napari_chloroplasts:napari.yaml

[options.package_data]
napari_chloroplasts = napari.yaml
